# bls-release-dates

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  scratch.ipynb
.github/workflows/: docs.yml
data/: release_dates.parquet  vintage_dates.parquet
docs/: api.md  ces.md  index.md  qcew.md  sae.md
src/bls_release_dates/: __init__.py  __main__.py  config.py  parser.py  read.py  scraper.py  vintage_dates.py
src/bls_revision_dates/: __init__.py  config.py  parser.py
src/releases/: __init__.py  __main__.py  config.py  parser.py  scraper.py  vintage_dates.py
