[project]
name = "releases"
version = "0.1.0"
description = "Scrape BLS news releases for CES, SAE, and QCEW release dates"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.27.0",
    "polars>=0.20.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "ipykernel>=7.2.0",
]

[project.scripts]
releases = "releases.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/releases"]
